Make ZIP evidence write Android compatible